--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
 }
 
 .App-header {
