--- a/src/components/styles/BoardStyles.css
+++ b/src/components/styles/BoardStyles.css
@@ -1,28 +1,23 @@
 .mainBoard {
-  padding: 10px;
-  font-size: 32px;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 1fr;
 }
 
 .diceBoard {
-  height: 150px;
-  font-size: 16;
-  display: flex;
-  justify-content: flex-end;
-  margin: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1fr;
 }
 
 button {
   background-color: #6679ff;
   color: #ffffff;
-  font-size: 20px;
-  padding: 18px;
   border: none;
   border-radius: 5%;
-  margin-left: 20px;
-  margin-right: 20px;
 }
 
 #rollBtn {
-  font-size: 50px;
-  margin: 20px;
+  font-size: 1rem;
+  margin: 1rem;
 }
